# Noises

./: .gitignore  README  TODO  mk  mk_and_run
experiment/qtgstreamer_test/: CMakeLists.txt  mediaapp.cpp  mediaapp.h  player.cpp  player.h
src/: CMakeLists.txt  application.cpp  application.h  cue_model.cpp  cue_model.h  main.cpp  main_window.cpp  main_window.h  preferences.cpp  preferences.h  progress_delegate.cpp  progress_delegate.h  types.h
src/app/: application.cpp  main_window.cpp  main_window.h  preferences.cpp  preferences.h
src/audio/: audio_player.cpp  audio_player.h  engine.cpp  engine.h  fade.cpp  fade.h  hub.cpp  hub.h  manager.cpp  manager.h  matrix_settings.cpp  matrix_settings.h  player.cpp  player.h  types.h  volume_matrix.cpp  volume_matrix.h  wait_player.cpp  wait_player.h
src/audio/player/: audio_player.cpp  audio_player.h  fade_player.cpp  fade_player.h  player.cpp  player.h  types.h  wait_player.cpp  wait_player.h
src/cmake/Modules/: Findportaudio.cmake
src/cue/: audio_cue_model_item.cpp  audio_cue_model_item.h  control_cue_model_item.cpp  control_cue_model_item.h  cue_model_item.cpp  cue_model_item.h  group_cue_model_item.cpp  group_cue_model_item.h  types.h  wait_cue_model_item.cpp  wait_cue_model_item.h
src/cue_dialogs/: api.cpp  api.h  audio_cue_dialog.cpp  audio_cue_dialog.h  control_cue_dialog.cpp  control_cue_dialog.h  cue_dialog.cpp  cue_dialog.h  detail.h  group_cue_dialog.cpp  group_cue_dialog.h  wait_cue_dialog.cpp  wait_cue_dialog.h
src/cue_widget/: cue_model.cpp  cue_model.h  cue_widget.cpp  cue_widget.h  progress_delegate.cpp  progress_delegate.h  types.cpp  types.h
src/cues/: audio_cue_model_item.cpp  audio_cue_model_item.h  control_cue_model_item.cpp  control_cue_model_item.h  cue_model_item.cpp  cue_model_item.h  group_cue_model_item.cpp  group_cue_model_item.h  types.cpp  types.h  wait_cue_model_item.cpp  wait_cue_model_item.h
src/data/: resources.qrc
src/utils/: audio.cpp  audio.h  cue.cpp  cue.h  macro.h  math.h  time.cpp  time.h
src/widgets/: expanding_line_edit.cpp  expanding_line_edit.h  file_line_edit.cpp  file_line_edit.h  matrix.cpp  matrix.h  pan.cpp  pan.h  time_label.cpp  time_label.h  volume_dial.cpp  volume_dial.h
sublime/: noises.sublime-project
