cmake_minimum_required( VERSION 2.8 )

PROJECT( noises )

FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE( QtGStreamer REQUIRED )

SET( CMAKE_BUILD_TYPE Debug )
SET( CMAKE_AUTOMOC ON )
SET( CMAKE_INCLUDE_CURRENT_DIR ON )

FILE( GLOB_RECURSE noises_SOURCES *.cpp )

INCLUDE_DIRECTORIES( ${QTGSTREAMER_INCLUDE_DIR} )
INCLUDE( ${QT_USE_FILE} } )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${QTGSTREAMER_DEFINITIONS} -Wall -Werror )

ADD_EXECUTABLE( noises
	${noises_SOURCES}
	${noises_HEADERS_MOC} )

TARGET_LINK_LIBRARIES( noises
	${QT_LIBRARIES}
	${QTGSTREAMER_LIBRARIES}
	${QTGSTREAMER_UI_LIBRARIES} )
