cmake_minimum_required( VERSION 2.8 )

PROJECT( noises )

FIND_PACKAGE( Qt4 REQUIRED )
FIND_PACKAGE( QtGStreamer REQUIRED )

SET( CMAKE_BUILD_TYPE Debug )
SET( CMAKE_AUTOMOC ON )
SET( CMAKE_INCLUDE_CURRENT_DIR ON )

FILE( GLOB_RECURSE noises_SOURCES *.cpp )

SET( noises_RESOURCES data/resources.qrc )

INCLUDE_DIRECTORIES(
	${QTGSTREAMER_INCLUDE_DIR}
	${CMAKE_CURRENT_BINARY_DIR} )

INCLUDE( ${QT_USE_FILE} } )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${QTGSTREAMER_DEFINITIONS} -Wall -Werror )

QT4_ADD_RESOURCES( noises_RESOURCES_RCC ${noises_RESOURCES} )

ADD_EXECUTABLE( noises
	${noises_SOURCES}
	${noises_HEADERS_MOC}
	${noises_RESOURCES_RCC} )

TARGET_LINK_LIBRARIES( noises
	${QT_LIBRARIES}
	${QTGSTREAMER_LIBRARIES}
	${QTGSTREAMER_UI_LIBRARIES} )
